# unlimited-ocr-archive-test

./: .env.example  .gitignore  CLAUDE.md  LINKEDIN.md  README.md  compare.py  nuextract3_test.py  pyproject.toml  unlimited_ocr_test.py
baselines/asyouwere/: 52420710RX1.docling.md  52420710RX1.docling.txt  52420710RX2.docling.md  52420710RX2.docling.txt
baselines/vva/: 23930102001.claude-sonnet-4-5.meta.json  23930102001.claude-sonnet-4-5.txt  2710101001.claude-sonnet-4-5.meta.json  2710101001.claude-sonnet-4-5.txt
outputs/: comparison.md  summary.json
outputs/_raw/23930102001/: result.md
outputs/_raw/2710101001/: result.md
outputs/vva/: 23930102001.unlimited-ocr.meta.json  2710101001.unlimited-ocr.meta.json  2710101001.unlimited-ocr.txt
recipes/: colab_runner.py
scripts/: pull_results.py
