[project]
name = "unlimited-ocr-archive-test"
version = "0.1.0"
description = "Test Baidu's Unlimited-OCR 3B VLM on real archival documents (VVA + ASYOUWERE) — companion to prior Textract / Claude vision / docling OCR experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
]
